force-app/main/default/objects/SchemeFees__c/SchemeFees__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Loyalty Holds the Scheme Fees Details</description>
    <label>Scheme Fees</label>
</CustomObject>