force-app/main/default/objects/SchemeFees__c/fields/Join_Fee_Exculde_GST__c.field-meta.xml
<CustomField>
    <fullName>Join_Fee_Exculde_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Join Fee Exculde GST</label>
    <type>Checkbox</type>
</CustomField>