force-app/main/default/objects/SchemeFees__c/fields/Membership_Fee_Exclude_GST__c.field-meta.xml
<CustomField>
    <fullName>Membership_Fee_Exclude_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership Fee Exclude GST</label>
    <type>Checkbox</type>
</CustomField>