force-app/main/default/objects/SchemeFees__c/fields/Published_4_Year_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Published_4_Year_Membership_Fee__c</fullName>
    <label>Published 4 Year Membership Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>