force-app/main/default/objects/SchemeFees__c/fields/Published_Join_Fee__c.field-meta.xml
<CustomField>
    <fullName>Published_Join_Fee__c</fullName>
    <label>Published Join Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>