force-app/main/default/objects/SchemeFees__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>