force-app/main/default/objects/SchemeFees__c/fields/X1_Yr_Mship_Renewal_Fee_Points_Published__c.field-meta.xml
<CustomField>
    <fullName>X1_Yr_Mship_Renewal_Fee_Points_Published__c</fullName>
    <label>Published 1 Yr M&apos;ship Renewal Fee Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>