force-app/main/default/objects/SchemeFees__c/fields/X2_Year_Membership_Fee_points__c.field-meta.xml
<CustomField>
    <fullName>X2_Year_Membership_Fee_points__c</fullName>
    <label>Publised 2 Year Membership Fee points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>