force-app/main/default/objects/SchemeFees__c/fields/X2_Year_Membership_Renewal_Fee_Published__c.field-meta.xml
<CustomField>
    <fullName>X2_Year_Membership_Renewal_Fee_Published__c</fullName>
    <label>Published 2 Yr M&apos;ship Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>