force-app/main/default/objects/SchemeFees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scheme_Type__c</columns>
    <columns>Currency__c</columns>
    <columns>Published_Join_Fee__c</columns>
    <columns>Join_Fee_Points__c</columns>
    <columns>X1_Year_Membership_Fee_Points__c</columns>
    <columns>X2_Year_Membership_Fee_points__c</columns>
    <columns>Join_Fee_Exculde_GST__c</columns>
    <columns>Membership_Fee_Exclude_GST__c</columns>
    <columns>Published_1_Year_Membership_Fee__c</columns>
    <columns>Published_2_Year_Membership_Fee__c</columns>
    <columns>Published_4_Year_Membership_Fee__c</columns>
    <columns>Published_4_Year_Membership_Fee_Points__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>